# AgentOllama

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_gui.bat
include/: agent.hpp  file_manager.hpp  json_parser.hpp  ollama_client.hpp
resources/: app.rc
src/: agent.cpp  file_manager.cpp  gui_main.cpp  json_parser.cpp  main.cpp  ollama_client.cpp
